WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283694
[Ruby] Breakable ruby base content unexpectedly overflows its base container
https://bugs.webkit.org/show_bug.cgi?id=283694
Summary
[Ruby] Breakable ruby base content unexpectedly overflows its base container
alan
Reported
2024-11-25 20:02:40 PST
see
https://67440d05c7b448995b6e5619--admirable-muffin-193494.netlify.app/
Attachments
Patch
(5.78 KB, patch)
2024-11-25 20:10 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(7.13 KB, patch)
2024-11-26 05:52 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-11-25 20:10:33 PST
Created
attachment 473372
[details]
Patch
alan
Comment 2
2024-11-26 05:52:15 PST
Created
attachment 473375
[details]
[fast-cq]Patch
EWS
Comment 3
2024-11-26 07:28:21 PST
Committed
287095@main
(3b5524eb46be): <
https://commits.webkit.org/287095@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473375
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-11-26 07:29:14 PST
<
rdar://problem/140584028
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug