[Ruby] Breakable ruby base content unexpectedly overflows its base container https://bugs.webkit.org/show_bug.cgi?id=283694

Reviewed by Antti Koivisto.

RubyFormattingContext::applyRubyAlignOnBaseContent assumes base content is not breakable
and expects to see a base end boundary in the line run list.
This assumption leads to computing incorrect base content width (logical left of the run _after_ the base end) which results in incorrect alignment (i.e. base content is computed to be smaller
than what it really is which means extra distributable space).

* LayoutTests/fast/ruby/ruby-base-with-breakable-content-inside-expected.html: Added.
* LayoutTests/fast/ruby/ruby-base-with-breakable-content-inside.html: Added.
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::RubyFormattingContext::applyRubyAlignOnBaseContent):

(Kusa-Makura-background-canvas shows progression)

Canonical link: https://commits.webkit.org/287095@main